Cleanup dependencies a bit.  Temporarily comment webservice related code from the build. Resolve package conflict with system and utils. Add .kilocode config for evaluation.