@@ -1,5 +1,5 @@
 /*
- * Copyright 1999-2023 Percussion Software, Inc.
+ * Copyright 1999-2025 Percussion Software, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -35,6 +35,7 @@ import java.util.Locale;
  * @version    1.0
  * @since      1.0
  */
+// REFACTORED: CP-JAVA11
 public class PSBackEndServerDownError extends PSBackEndError
 {
    /**
@@ -76,8 +77,8 @@ public class PSBackEndServerDownError extends PSBackEndError
    }
 
    /**
-    * sublcasses must override this to build the messages in the
-    * specified locale
+    * Subclasses must override this to build the messages in the
+    * specified locale.
     */
    protected PSLogSubMessage[] buildSubMessages(Locale loc)
    {
@@ -104,7 +105,7 @@ public class PSBackEndServerDownError extends PSBackEndError
          m_errorCode,
          PSErrorManager.createMessage(
             IPSServerErrors.NATIVE_ERROR, 
-            new Object[] { new Integer(m_errorCode), m_errorArgs[0] },
+            new Object[] { Integer.valueOf(m_errorCode), m_errorArgs[0] },
             loc ));
 
       return msgs;
