@@ -1,5 +1,5 @@
 /*
- * Copyright 1999-2023 Percussion Software, Inc.
+ * Copyright 1999-2025 Percussion Software, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -73,7 +73,8 @@ public class PSBackEndUpdateProcessingError extends PSBackEndError
       this(   applId,
             sessionId,
             IPSServerErrors.NATIVE_ERROR,
-            new Object[] { new Integer(errorCode),
+            new Object[] { Integer.valueOf(errorCode),
+// REFACTORED: CP-JAVA11
                            ((errorString == null) ? "" : errorString) },
             updateString,
             null);   // xml tree
@@ -241,8 +242,8 @@ public class PSBackEndUpdateProcessingError extends PSBackEndError
    }
 
    /**
-    * sublcasses must override this to build the messages in the
-    * specified locale
+    * Subclasses must override this to build the messages in the
+    * specified locale.
     */
    protected PSLogSubMessage[] buildSubMessages(Locale loc)
    {
